--- a/configuration.properties
+++ b/configuration.properties
@@ -1,19 +1,19 @@
 browser=chrome
-url=https://demo.automationtesting.in/Register.html
+url=https://demo.automationtesting.in/
 signInUrl=https://demo.automationtesting.in/SignIn.html
-firstName=Podsho
-lastName=Bosh
-fullAddress=21886 Schenley Terrace, Broadlands, VA 20148
-email=podsho1704@gmail.com
-phoneNum=202-766-8250
+firstName=firstName
+lastName=lastName
+fullAddress=1234 Street St, TX, 1234
+email=email1704@gmail.com
+phoneNum=1234567890
 gender=male
 hobbies=Movies
 Languages=English
 skill=CSS
 country=United States
-year=2004
+year=1999
 month=September
-date=17
+date=10
 password=Coleworld04#
 option1=Sign-In
 option2=Skip Sign-In
